# sp-cdr-blockchain

./: .gitignore  Cargo.toml  git_commands.md  integration_test.sh
api_zkp_keys/: cdr_privacy.pk  cdr_privacy.vk  ceremony_transcript.json  settlement_calculation.pk  settlement_calculation.vk
blockchain/: mdbx.lck
demo/: cdr-demo.sh  demo-simple.sh  explore-architecture.sh  sample-cdr.json  settlement-calc.py  single-node-demo.sh  storage-test.sh  test_node.sh
deploy/: README.md  mac-setup.sh  physical-setup.sh  vm-setup.sh
deployment/: README.md
docker/: Dockerfile  Dockerfile.prebuilt  QUICK_START.md  README-PERSISTENT.md  README-TRUSTED-SETUP.md  README.md  check_bc.md  clean.sh  docker-compose.persistent.yml  docker-compose.trusted-setup-persistent.yml  docker-compose.trusted-setup.yml  docker-compose.yml  monitor.sh  start-persistent.sh  start-trusted-setup.sh  start.sh  stop.sh  test.sh
docs/: ARCHITECTURE.md  PRODUCTION_DEPLOYMENT_CRITICAL.md  STARTUP.md  architecture-production.html  architecture.html  architecture.py
examples/: network_demo.rs
scripts/: bce_emulator.sh
src/: bce_pipeline.rs  cdr_pipeline.rs  lib.rs  main.rs
src/api/: bce_ingestion.rs  mod.rs
src/blockchain/: block.rs  chain.rs  mod.rs  transaction.rs  validator_set.rs
src/common/: consensus.rs  mod.rs  network.rs  storage_interface.rs
src/crypto/: bls.rs  bls_mock.rs  keys.rs  mod.rs  signatures.rs
src/network/: consensus_networking.rs  mod.rs  peer_discovery.rs  settlement_messaging.rs
src/primitives/: blockchain_integration.rs  cdr.rs  crypto.rs  error.rs  mod.rs  primitives.rs
src/smart_contracts/: consensus_integration.rs  crypto_verifier.rs  mdbx_storage.rs  mod.rs  settlement.rs  settlement_contract.rs  vm.rs
src/storage/: chain_store.rs  chain_store_fixed.rs  chain_store_simple.rs  history_store.rs  mdbx_chain_store.rs  mdbx_store.rs  mod.rs  simple_mdbx.rs  sled_store.rs
src/tests/: blockchain_tests.rs  cdr_tests.rs  mod.rs  (+5 more)
(+10 files in other folders)
