[package]
name = "sp-cdr-reconciliation-bc"
version = "0.1.0"
edition = "2021"

[lib]
name = "sp_cdr_reconciliation_bc"
path = "src/lib.rs"

[[bin]]
name = "sp-cdr-node"
path = "src/main.rs"

[[bin]]
name = "trusted-setup-demo"
path = "src/bin/trusted_setup_demo.rs"

[[bin]]
name = "cdr-pipeline-demo"
path = "src/bin/cdr_pipeline_demo.rs"

[[bin]]
name = "basic-test"
path = "src/bin/basic_test.rs"

[[bin]]
name = "test-real-crypto"
path = "tests/util/test_real_crypto.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography (from albatross)
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2.0"
rand = "0.8"
getrandom = "0.2"

# ZK proofs (updated to compatible versions)
ark-ec = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-mnt4-753 = "0.4"
ark-mnt6-753 = "0.4"
ark-crypto-primitives = "0.4"
ark-snark = "0.4"

# BLS signatures (from albatross bls module)
blstrs = "0.7"
group = "0.13"
pairing = "0.23"

# Storage - Updated MDBX version
libmdbx = "0.6"
sled = "0.34"

# Networking
libp2p = { version = "0.53", features = ["tcp", "tokio", "noise", "yamux", "gossipsub", "mdns", "identify", "macros"] }
bincode = "1.3"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
ark-poly = "0.5.0"
ark-poly-commit = "0.5.0"
ark-bls12-381 = "0.5.0"

# Examples
[[example]]
name = "network_demo"
path = "examples/network_demo.rs"

[features]
default = ["std"]
std = []

[dev-dependencies]
tempfile = "3.22.0"
